# D-R1_FineTune

./: .gitignore  README.md  Untitled0.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: D-R1_FineTune-checkpoint.ipynb
notebook/: Untitled.ipynb  embeddings.ipynb
notebook/.ipynb_checkpoints/: D-R1_FineTune-checkpoint.ipynb  Untitled-checkpoint.ipynb  embeddings-checkpoint.ipynb
scripts/: encoders.py
services/: DataModel.py  api.py
